--- a/aaaa.HTML
+++ b/aaaa.HTML
@@ -78,8 +78,8 @@ content="width=device-width, initial-scale=1.0">
 
   <!-- Navigation -->
 <div class="nav">
-    <a href="aaaa.Html">Home</a> 
-    <a href="a link.Html">About computer</a>
+    <a href="aaaa.HTML">Home</a> 
+    <a href="a link.HTML">About computer</a>
     <a href="https://en.m.wikipedia.org/wiki/Information_and_communications_technology">Resources</a>
     <a href="a ww.HTML">About us</a>
 </div>
