--- a/a ww.HTML
+++ b/a ww.HTML
@@ -67,6 +67,6 @@
             <h3>Sales,Angel Sophia </h3>
              <h3>Aguilar, Mae</h3>
                   </div>
-<a href="aaaa.html" class="btn">Home</a>
+<a href="aaaa.HTML" class="btn">Home</a>
 </body>
 </html>
